--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>presentation</artifactId>
   <packaging>war</packaging>
   <version>1.0</version>
-  <name>testmongo</name>
+  <name>Presentations</name>
   <licenses>
       <license>
           <name>Apache License, Version 2.0</name>
