--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
      <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
      <id>openshift</id>
      <build>
-        <finalName>testmongo</finalName>
+        <finalName>Presentations</finalName>
         <plugins>
           <plugin>
             <artifactId>maven-war-plugin</artifactId>
