--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,22 +6,25 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          metadata-complete="false">
 
-         <servlet>
-                  <servlet-name>health</servlet-name>
-                  <jsp-file>/health.jsp</jsp-file>
-         </servlet>
-         <servlet>
-             <servlet-name>mongoDB</servlet-name>
-             <servlet-class>test.mongodb.servlet.MongoDBServlet</servlet-class>
-         </servlet>
-         <servlet-mapping>
-                  <servlet-name>health</servlet-name>
-                  <url-pattern>/health</url-pattern>
-         </servlet-mapping>
-         <servlet-mapping>
-             <servlet-name>mongoDB</servlet-name>
-             <url-pattern>/mongoDB</url-pattern>
-         </servlet-mapping>
+    <welcome-file-list>  
+        <welcome-file>index.html</welcome-file>  
+    </welcome-file-list> 
+    <servlet>
+        <servlet-name>health</servlet-name>
+        <jsp-file>/health.jsp</jsp-file>
+    </servlet>
+    <servlet>
+        <servlet-name>mongoDB</servlet-name>
+        <servlet-class>test.mongodb.servlet.MongoDBServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>health</servlet-name>
+        <url-pattern>/health</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>mongoDB</servlet-name>
+        <url-pattern>/mongoDB</url-pattern>
+    </servlet-mapping>
          
 </web-app>
 
