--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
               <warName>ROOT</warName>
             </configuration>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <encoding>UTF-8</encoding>
+              <source>1.6</source>
+              <target>1.6</target>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
